--- a/examples/package.json
+++ b/examples/package.json
@@ -4,7 +4,7 @@
   "description": "`buttons.js` contains the css directly lifted from [Bootstrap](http://getbootstrap.com), and transformed into simple JavaScript objects.",
   "main": "index.js",
   "scripts": {
-    "build": "./node_modules/.bin/browserify -t reactify index.js > out.js",
+    "build": "./node_modules/.bin/browserify -t reactify -t [flow-typestrip] index.js > out.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "chenglou",
